<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_blue1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtUsernameRegister"
                android:background="@drawable/custom_edittext_bg"
                android:drawableStart="@drawable/ic_username"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:importantForAutofill="no"
                android:hint="@string/Username"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtFirstName"
                android:background="@drawable/custom_edittext_bg"
                android:drawableStart="@drawable/ic_username"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:importantForAutofill="no"
                android:hint="@string/FirstName"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtLastName"
                android:background="@drawable/custom_edittext_bg"
                android:drawableStart="@drawable/ic_username"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:importantForAutofill="no"
                android:hint="@string/LastName"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtEmail"
                android:background="@drawable/custom_edittext_bg"
                android:drawableStart="@drawable/ic_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:importantForAutofill="no"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtPasswordRegister"
                android:background="@drawable/custom_edittext_bg"
                android:drawableStart="@drawable/ic_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:importantForAutofill="no"
                android:hint="@string/Password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="350dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Register"
                android:onClick="onClick"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="300dp" />

            <Button
                android:id="@+id/btnErased"
                android:layout_width="350dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClick"
                android:text="@string/Erase"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="123dp" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>