<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue1"
    tools:context=".Controller.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayoutParent"
        android:layout_width="0dp"
        android:layout_height="385dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Icon"
            app:srcCompat="@drawable/todolisticon" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:importantForAutofill="no"
            android:background="@drawable/custom_edittext_bg"
            android:drawableStart="@drawable/ic_username"
            android:inputType="text"

            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="83dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/Password"
            android:background="@drawable/custom_edittext_bg"
            android:drawableStart="@drawable/ic_password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="39dp" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/Login"
            tools:layout_editor_absoluteX="218dp"
            tools:layout_editor_absoluteY="123dp" />


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="0dp"
            android:text="@string/Register"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="300dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>